--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -153,7 +153,7 @@
 
                         <h:form id="formTopMenu">
 
-                            <p:menubar id="menubar" autoDisplay="false" style="border: 0px solid #fff !important;">
+                            <p:menubar id="menubar" autoDisplay="false" >
                                 <p:menuitem action="#{casoController.inbox}" 
                                             ajax="false" value="Inbox" icon="fa fa-inbox"></p:menuitem>
                                 <p:submenu label="Casos" icon="fa fa-ticket">
