--- a/src/main/webapp/script/appSetting/config.xhtml
+++ b/src/main/webapp/script/appSetting/config.xhtml
@@ -45,23 +45,7 @@
 
                         <h:panelGrid columns="2" rendered="#{data.type eq 'inputhtml'}">
                             <pe:ckEditor  value="#{data.settingValue}" required="#{data.required}" width="560" height="210" language="es"
-                                    toolbar="[
-                                 { name: 'document', items : [ 'Source','Preview','Print' ] },
-                                 { name: 'clipboard', items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
-                                 { name: 'editing', items : [ 'SpellChecker', 'Scayt' ] },
-                                 { name: 'insert', items : [ 'Table','HorizontalRule','SpecialChar','PageBreak'] },
-                                 '/',
-                                 { name: 'basicstyles', items : [ 'Bold','Italic','Underline','Strike','Subscript','Superscript','-','RemoveFormat' ] },
-                                 { name: 'paragraph', items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote','-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock'] },
-                                 '/',
-                                 { name: 'links', items: [ 'Link', 'Unlink', 'Anchor' ] },
-	                         { name: 'insert', items: [ 'Image', 'Flash', 'Table', 'HorizontalRule', 'Smiley', 'SpecialChar', 'PageBreak', 'Iframe' ] },
-                                 '/',
-                                 { name: 'styles', items : [ 'Styles','Format','Font','FontSize' ] },
-                                 { name: 'colors', items : [ 'TextColor','BGColor' ] },
-                                 { name: 'tools', items : [ 'Maximize', 'ShowBlocks'] }
-
-                                 ]"/>
+                                    toolbar="#{applicationBean.ckEditorToolbar}"/>
                             
                             
                             <p:commandLink id="overlayBtn" value="Marcadores" />
