--- a/src/main/webapp/script/reglaTrigger/Edit.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Edit.xhtml
@@ -299,21 +299,7 @@
                             <p:inputText id="emailSubject" value="#{reglaTriggerController.emailTemp.subject}" title="asunto" style="width: 494px;"/>
                         </h:panelGrid>
                         <pe:ckEditor value="#{reglaTriggerController.emailTemp.body}"
-                                     toolbar="[
-                                     { name: 'document', items : [ 'Source','Preview','Print' ] },
-                                     { name: 'clipboard', items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
-                                     { name: 'editing', items : [ 'SpellChecker', 'Scayt' ] },
-                                     { name: 'insert', items : [ 'Table','HorizontalRule','SpecialChar','PageBreak'] },
-                                     '/',
-                                     { name: 'basicstyles', items : [ 'Bold','Italic','Underline','Strike','Subscript','Superscript','-','RemoveFormat' ] },
-                                     { name: 'paragraph', items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote','-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock'] },
-                                     '/',
-                                     { name: 'styles', items : [ 'Styles','Format','Font','FontSize' ] },
-                                     { name: 'colors', items : [ 'TextColor','BGColor' ] },
-                                     { name: 'tools', items : [ 'Maximize', 'ShowBlocks'] }
-
-                                     ]"
-
+                                     toolbar="#{applicationBean.ckEditorToolbar}"
                                      id="respuesta" width="560" height="190"/>
 
 
