Fix tamaño logo

--- a/src/main/webapp/script/appSetting/config.xhtml
+++ b/src/main/webapp/script/appSetting/config.xhtml
@@ -84,7 +84,7 @@
 
                             <h:panelGrid columns="2">
                                 <p:row>
-                                    <p:graphicImage id="imageLogoPreview0" value="#{applicationBean.logo}" cache="false"/>
+                                    <p:graphicImage id="imageLogoPreview0" value="#{applicationBean.logo}" cache="false" width="200"/>
 
                                 </p:row>
 
