--- a/src/main/webapp/script/clipping/List.xhtml
+++ b/src/main/webapp/script/clipping/List.xhtml
@@ -239,7 +239,7 @@
 
                     <p:separator/>
 
-                    <p:commandButton value="Cerrar" oncomplete="editCreateDialog.hide()" process="@this" icon="ui-icon-arrowreturnthick-1-w"  >
+                    <p:commandButton value="Cerrar" oncomplete="editCreateDialog.hide()" update=":createEditform" process="@this" icon="ui-icon-arrowreturnthick-1-w"  >
                         <p:resetInput target="@form" />
                     </p:commandButton>
 
