--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -295,7 +295,7 @@
 
 
             <p:dialog modal="true" widgetVar="statusDialog" header="Espere..." appendTo="@(body)" dynamic="false"
-                      transient="true" draggable="false" closable="false" resizable="false">  
+                      transient="true" draggable="false" closable="false" resizable="false" closeOnEscape="true">  
                 <p:graphicImage library="images" name="ajaxloadingbar.gif" />
             </p:dialog>
 
