--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -62,19 +62,16 @@
                                 <p:outputLabel value="#{bundle.EditCasoLabel_fechaCreacion}" for="fechaCreacion" style="font-weight:bold"/>
                             </p:column>
                             <p:column>
-                                <h:outputText id="fechaCreacion" value="#{casoController.selected.fechaCreacion}" title="#{bundle.EditCasoTitle_fechaCreacion}">
-                                    <f:convertDateTime pattern="#{bundle.dateFormat2}" />
+                                <h:outputText id="fechaCreacion" value="#{casoController.formatDate(casoController.selected.fechaCreacion)} (#{casoController.prettyDate(casoController.selected.fechaCreacion)})">
                                 </h:outputText>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column>
-
                                 <p:outputLabel value="#{bundle.EditCasoLabel_fechaModif}" for="fechaModif" style="font-weight:bold"/>
                             </p:column>
                             <p:column>
-                                <h:outputText id="fechaModif" value="#{casoController.selected.fechaModif}" title="#{bundle.EditCasoTitle_fechaModif}">
-                                    <f:convertDateTime pattern="#{bundle.dateFormat2}" />
+                                <h:outputText id="fechaModif" value="#{casoController.formatDate(casoController.selected.fechaModif)} (#{casoController.prettyDate(casoController.selected.fechaModif)})">
                                 </h:outputText>
                             </p:column>
 
