--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -239,7 +239,7 @@
                                     <i class="fa fa-calendar"></i>
                                 </h:panelGroup>
                                 <h:panelGroup rendered="#{item.cantidadAttachment gt 0}">
-                                    &nbsp; <i class="fa fa-paperclip"></i>    
+                                    <i class="fa fa-paperclip"></i>    
                                 </h:panelGroup>  
                             </h:panelGroup> 
                         </p:column>     
