--- a/src/main/webapp/script/reglaTrigger/List.xhtml
+++ b/src/main/webapp/script/reglaTrigger/List.xhtml
@@ -11,7 +11,7 @@
             <h:outputText value="Reglas de negocio"></h:outputText>
         </ui:define>
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" >
+            <p:accordionPanel multiple="true" cache="false" >
                 <p:tab title="Reglas de negocio" id="accionestab1">
                     <h:outputLabel escape="false" value="#{bundle.ayudaReglas}"/>
                     <br/>
