fixed constraint plus merge in tx plus adjuntos

--- a/src/main/webapp/script/report_graphs/reports.xhtml
+++ b/src/main/webapp/script/report_graphs/reports.xhtml
@@ -193,7 +193,9 @@
                 <h1><p:outputLabel value="#{reporteController.chartModelTitle}"/></h1>
                 <p:messages id="messages" showDetail="true" showSummary="true"/>  
 
-                <itcs:filterView controllerMBean="#{reporteController}" filterHelper="#{reporteController.filterHelper2}" update=":mainform:messages :reportForm"/>
+                <itcs:filterView rendered="#{reporteController.showFilter}"
+                    controllerMBean="#{reporteController}"
+                                 filterHelper="#{reporteController.filterHelper2}" update=":mainform:messages :reportForm"/>
 
                 <br />
 
