--- a/src/main/webapp/script/reglaTrigger/Create.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Create.xhtml
@@ -5,6 +5,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
     <ui:composition template="/script/template_inbox.xhtml">
@@ -225,7 +226,10 @@
                                              value="#{accion.parametros}" styleClass="full-width"
                                              required="true" requiredMessage="Se requiere que seleccione una clase que implemente la Accion."                               
                                              rendered="#{reglaTriggerController.esAccionCustom(accion)}">
-                                <f:selectItems value="#{reglaTriggerController.actionClassNames}"/>
+
+                                <c:forEach items="#{reglaTriggerController.actionClassNames}" var="actionclass" varStatus="loop">
+                                    <f:selectItem itemValue="#{actionclass}" itemLabel="#{reglaTriggerController.findActionInfo(actionclass).name()}" />
+                                </c:forEach>
                                 <p:ajax update=":form:accionesTable"/>
                             </p:selectOneMenu>
 
